update spark conf job

--- a/src/main/conf/pipe2to3.conf
+++ b/src/main/conf/pipe2to3.conf
@@ -1,8 +1,8 @@
-spark.master            yarn
-spark.class             com.alstom.datalab.Main
-spark.executor.instances    2
+spark.master                yarn
+spark.class                 com.alstom.datalab.Main
+spark.executor.instances    15
 spark.executor.cores        3
-spark.executor.memory        8G
-spark.driver.memory        1G
+spark.executor.memory       10G
+spark.driver.memory         4G
 spark.executor.extraJavaOptions -XX:MaxPermSize=256m
-spark.driver.extraJavaOptions   -Dmethod=pipeline2to3 -Drepo=s3://alstomlezoomerus/DATA/Repository -Ddirout=s3://alstomlezoomerus/DATA/3-NXFile -Dcontrol=s3://alstomlezoomerus/DATA/3-control
+spark.driver.extraJavaOptions   -Dmethod=pipeline2to3 -Dcontext.repo=s3://alstomlezoomerus/DATA/Repository -Dcontext.dirout=s3://alstomlezoomerus/DATA/3-NXFile -Dcontext.control=s3://alstomlezoomerus/DATA/3-control -Dcontext.meta=s3://alstomlezoomerus/DATA/2-meta
