--- a/src/main/conf/pipe3to4.conf
+++ b/src/main/conf/pipe3to4.conf
@@ -2,7 +2,7 @@ spark.master            yarn
 spark.class             com.alstom.datalab.Main
 spark.executor.instances    15
 spark.executor.cores        3
-spark.executor.memory        8G
-spark.driver.memory        4G
+spark.executor.memory       8G
+spark.driver.memory         4G
 spark.executor.extraJavaOptions -XX:MaxPermSize=256m
-spark.driver.extraJavaOptions   -Dmethod=pipeline3to4 -Drepo=s3://alstomlezoomerus/DATA/Repository -Ddirout=s3://alstomlezoomerus/DATA/4-NXFile -Dcontrol=s3://alstomlezoomerus/DATA/3-control -Ddirerr=s3://alstomlezoomerus/DATA/3-error -Ddirin=s3://alstomlezoomerus/DATA/3-NXFile
+spark.driver.extraJavaOptions   -Dmethod=pipeline3to4 -Dcontext.repo=s3://alstomlezoomerus/DATA/Repository -Dcontext.dirout=s3://alstomlezoomerus/DATA/4-NXFile -Dcontext.control=s3://alstomlezoomerus/DATA/3-control -Dcontext.direrr=s3://alstomlezoomerus/DATA/3-error -Dcontext.dirin=s3://alstomlezoomerus/DATA/3-NXFile -Dcontext.meta=s3://alstomlezoomerus/DATA/2-meta
