shell with conf

--- a/src/main/conf/pipe2to3.conf
+++ b/src/main/conf/pipe2to3.conf
@@ -3,6 +3,11 @@ spark.class                 com.alstom.datalab.Main
 spark.executor.instances    15
 spark.executor.cores        3
 spark.executor.memory       10G
-spark.driver.memory         4G
+spark.driver.memory         8G
 spark.executor.extraJavaOptions -XX:MaxPermSize=256m
-spark.driver.extraJavaOptions   -Dmethod=pipeline2to3 -Dcontext.repo=s3://alstomlezoomerus/DATA/Repository -Dcontext.dirout=s3://alstomlezoomerus/DATA/3-NXFile -Dcontext.control=s3://alstomlezoomerus/DATA/3-control -Dcontext.meta=s3://alstomlezoomerus/DATA/2-meta
+spark.driver.extraJavaOptions   -Dmethod=pipeline2to3 -Dcontext.repo=s3://alstomlezoomerus/DATA/Repository -Dcontext.dirout=s3://alstomlezoomerus/DATA/3-NXFile -Dcontext.control=s3://alstomlezoomerus/DATA/3-control -Dcontext.meta=s3://alstomlezoomerus/DATA/3-meta
+spark.sql.shuffle.partitions  20
+spark.sql.autoBroadcastJoinThreshold  52428800
+shell.renamefileactive  true
+shell.dirin s3://alstomlezoomerus/DATA/2-NXFile
+shell.batchfilesize  20
