--- a/src/main/conf/pipe2to3.conf
+++ b/src/main/conf/pipe2to3.conf
@@ -1,13 +1,22 @@
-spark.master                yarn
-spark.class                 com.alstom.datalab.Main
-spark.executor.instances    15
-spark.executor.cores        3
-spark.executor.memory       10G
-spark.driver.memory         8G
-spark.executor.extraJavaOptions -XX:MaxPermSize=256m
-spark.driver.extraJavaOptions   -Dmethod=pipeline2to3 -Dcontext.repo=s3://alstomlezoomerus/DATA/Repository -Dcontext.dirout=s3://alstomlezoomerus/DATA/3-NXFile -Dcontext.control=s3://alstomlezoomerus/DATA/3-control -Dcontext.meta=s3://alstomlezoomerus/DATA/3-meta
-spark.sql.shuffle.partitions  20
-spark.sql.autoBroadcastJoinThreshold  52428800
-shell.renamefileactive  true
+# spark submit options
+submit --class  com.alstom.datalab.Main
+submit --num-executors   17
+submit --executor-cores  3
+submit --executor-memory  10G
+submit --driver-memory  8G
+submit --conf spark.sql.shuffle.partitions=20
+submit --conf spark.sql.autoBroadcastJoinThreshold=52428800
+submit --conf spark.KryoSerializer.buffer.max=128m
+#submit --conf spark.storage.memoryFraction=0.2
+#submit --conf spark.shuffle.memoryFraction=0.4
+# command arguments
+args --method pipeline2to3
+args --repo s3://alstomlezoomerus/DATA/Repository
+args --dirout s3://alstomlezoomerus/DATA/3-NXFile
+args --control s3://alstomlezoomerus/DATA/3-control
+args --meta s3://alstomlezoomerus/DATA/2-meta
+args --partition 17
+# shell specific options
 shell.dirin s3://alstomlezoomerus/DATA/2-NXFile
-shell.batchfilesize  20
+shell.dirdone s3://alstomlezoomerus/DATA/2-NXFile/done
+shell.batchfilesize 100
