--- a/src/main/conf/pipe2to3.conf
+++ b/src/main/conf/pipe2to3.conf
@@ -11,12 +11,12 @@ submit --conf spark.KryoSerializer.buffer.max=128m
 #submit --conf spark.shuffle.memoryFraction=0.4
 # command arguments
 args --method pipeline2to3
-args --repo s3://alstomlezoomerus/DATA/Repository
-args --dirout s3://alstomlezoomerus/DATA/3-NXFile
-args --control s3://alstomlezoomerus/DATA/3-control
-args --meta s3://alstomlezoomerus/DATA/2-meta
+args --repo s3a://alstomlezoomerus/DATA/repo
+args --dirout s3a://alstomlezoomerus/DATA/out/encoded
+args --control s3a://alstomlezoomerus/DATA/control
+args --meta s3a://alstomlezoomerus/DATA/meta
 args --partition 17
 # shell specific options
-shell.dirin s3://alstomlezoomerus/DATA/2-NXFile
-shell.dirdone s3://alstomlezoomerus/DATA/2-NXFile/done
-shell.batchfilesize 100
+shell.dirin s3://alstomlezoomerus/DATA/in
+shell.dirdone s3://alstomlezoomerus/DATA/done
+shell.batchfilesize 200
