--- a/src/main/conf/pipe3to4.conf
+++ b/src/main/conf/pipe3to4.conf
@@ -11,12 +11,12 @@ submit --conf spark.KryoSerializer.buffer.max=128m
 #submit --conf spark.shuffle.memoryFraction=0.4
 # command arguments
 args --method pipeline3to4
-args --repo s3://alstomlezoomerus/DATA/Repository
-args --dirout s3://alstomlezoomerus/DATA/4-NXFile
-args --control s3://alstomlezoomerus/DATA/4-control
-args --meta s3://alstomlezoomerus/DATA/3-meta
+args --repo s3a://alstomlezoomerus/DATA/repo
+args --dirin s3a://alstomlezoomerus/DATA/out/encoded
+args --dirout s3a://alstomlezoomerus/DATA/out/resolved
+args --control s3a://alstomlezoomerus/DATA/control
+args --meta s3a://alstomlezoomerus/DATA/meta
 args --partition 17
 # shell specific options
-shell.dirin s3://alstomlezoomerus/DATA/3-NXFile
-shell.dirdone s3://alstomlezoomerus/DATA/3-NXFile/done
+shell.dirin s3://alstomlezoomerus/DATA/meta
 shell.batchfilesize 100
