* extract Meta management to its own trait * add a void DirectOuputCommitter to try to bypass renames on S3

--- a/src/main/conf/pipe2to3.conf
+++ b/src/main/conf/pipe2to3.conf
@@ -7,6 +7,7 @@ submit --driver-memory  8G
 submit --conf spark.sql.shuffle.partitions=20
 submit --conf spark.sql.autoBroadcastJoinThreshold=52428800
 submit --conf spark.KryoSerializer.buffer.max=128m
+submit --conf spark.hadoop.mapred.output.committer.class=com.alstom.datalab.hadoop.DirectOutputCommitter
 #submit --conf spark.storage.memoryFraction=0.2
 #submit --conf spark.shuffle.memoryFraction=0.4
 # command arguments
