--- a/src/main/conf/pipe2to3.conf
+++ b/src/main/conf/pipe2to3.conf
@@ -12,12 +12,12 @@ submit --conf spark.hadoop.mapred.output.committer.class=com.alstom.datalab.hado
 #submit --conf spark.shuffle.memoryFraction=0.4
 # command arguments
 args --method pipeline2to3
-args --repo s3a://alstomlezoomerus/DATA/repo
-args --dirout s3a://alstomlezoomerus/DATA/out/encoded
-args --control s3a://alstomlezoomerus/DATA/control
-args --meta s3a://alstomlezoomerus/DATA/meta
-args --partition 17
+args --repo s3a://gedatalab/data/repo
+args --dirout s3a://gedatalab/data/out/encoded
+args --control s3a://gedatalab/data/control
+args --meta s3a://gedatalab/data/meta
+#args --partition 17
 # shell specific options
-shell.dirin s3://alstomlezoomerus/DATA/in
-shell.dirdone s3://alstomlezoomerus/DATA/done
+shell.dirin s3://gedatalab/data/in
+shell.dirdone s3://gedatalab/data/done
 shell.batchfilesize 200
