--- a/src/main/conf/pipe3to4.conf
+++ b/src/main/conf/pipe3to4.conf
@@ -7,16 +7,18 @@ submit --driver-memory  8G
 submit --conf spark.sql.shuffle.partitions=20
 submit --conf spark.sql.autoBroadcastJoinThreshold=52428800
 submit --conf spark.KryoSerializer.buffer.max=128m
+submit --conf spark.hadoop.mapred.output.committer.class=com.alstom.datalab.hadoop.DirectOutputCommitter
 #submit --conf spark.storage.memoryFraction=0.2
 #submit --conf spark.shuffle.memoryFraction=0.4
 # command arguments
 args --method pipeline3to4
-args --repo s3a://alstomlezoomerus/DATA/repo
-args --dirin s3a://alstomlezoomerus/DATA/out/encoded
-args --dirout s3a://alstomlezoomerus/DATA/out/resolved
-args --control s3a://alstomlezoomerus/DATA/control
-args --meta s3a://alstomlezoomerus/DATA/meta
-args --partition 17
+args --repo s3a://gedatalab/data/repo
+args --dirin s3a://gedatalab/data/out/encoded
+args --dirout s3a://gedatalab/data/out/resolved
+args --control s3a://gedatalab/data/control
+args --meta s3a://gedatalab/data/meta
+#args --partition 17
 # shell specific options
-shell.dirin s3://alstomlezoomerus/DATA/meta
-shell.batchfilesize 100
+shell.dirin s3://gedatalab/data/control
+shell.dirdone s3://gedatalab/data/done
+shell.batchfilesize 10
