--- a/src/main/conf/repo.conf
+++ b/src/main/conf/repo.conf
@@ -1,20 +1,24 @@
 # spark submit options
 submit --class  com.alstom.datalab.Main
-submit --num-executors   17
+submit --num-executors   5
 submit --executor-cores  3
 submit --executor-memory  10G
 submit --driver-memory  8G
 submit --conf spark.sql.shuffle.partitions=20
 submit --conf spark.sql.autoBroadcastJoinThreshold=52428800
 submit --conf spark.KryoSerializer.buffer.max=128m
+submit --conf spark.hadoop.mapred.output.committer.class=com.alstom.datalab.hadoop.DirectOutputCommitter
 #submit --conf spark.storage.memoryFraction=0.2
 #submit --conf spark.shuffle.memoryFraction=0.4
 # command arguments
 args --method RepoProcessInFile
-args --repo s3://alstomlezoomerus/DATA/Repository
-args --dirout s3://alstomlezoomerus/DATA/Repository
-args --partition 17
+args --repo s3a://gedatalab/data/repo
+args --dirin s3a://gedatalab/data/in/repo
+args --dirout s3a://gedatalab/data/repo
+args --control s3a://gedatalab/data/control
+args --meta s3a://gedatalab/data/meta
+#args --partition 17
 # shell specific options
-shell.dirin s3://alstomlezoomerus/DATA/Repository/in
-shell.dirdone s3://alstomlezoomerus/DATA/Repository/done
-shell.batchfilesize 0
+shell.dirin s3://gedatalab/data/in/repo
+shell.dirdone s3://gedatalab/data/done/repo
+shell.batchfilesize 100
