--- a/src/main/conf/pipe2to3.conf
+++ b/src/main/conf/pipe2to3.conf
@@ -7,7 +7,7 @@ submit --driver-memory  8G
 submit --conf spark.sql.shuffle.partitions=20
 submit --conf spark.sql.autoBroadcastJoinThreshold=52428800
 submit --conf spark.KryoSerializer.buffer.max=128m
-submit --conf spark.hadoop.mapred.output.committer.class=com.alstom.datalab.hadoop.DirectOutputCommitter
+#submit --conf spark.hadoop.mapred.output.committer.class=com.alstom.datalab.hadoop.DirectOutputCommitter
 #submit --conf spark.storage.memoryFraction=0.2
 #submit --conf spark.shuffle.memoryFraction=0.4
 # command arguments
@@ -16,8 +16,8 @@ args --repo s3a://gedatalab/data/repo
 args --dirout s3a://gedatalab/data/out/encoded
 args --control s3a://gedatalab/data/control
 args --meta s3a://gedatalab/data/meta
-#args --partition 17
+args --partition 17
 # shell specific options
 shell.dirin s3://gedatalab/data/in
 shell.dirdone s3://gedatalab/data/done
-shell.batchfilesize 200
+shell.batchfilesize 5
