--- a/src/main/conf/pipe2to3.conf
+++ b/src/main/conf/pipe2to3.conf
@@ -1,6 +1,6 @@
 # spark submit options
 submit --class  com.alstom.datalab.Main
-submit --num-executors   17
+submit --num-executors   18
 submit --executor-cores  3
 submit --executor-memory  10G
 submit --driver-memory  8G
@@ -8,16 +8,17 @@ submit --conf spark.sql.shuffle.partitions=20
 submit --conf spark.sql.autoBroadcastJoinThreshold=52428800
 submit --conf spark.KryoSerializer.buffer.max=128m
 #submit --conf spark.hadoop.mapred.output.committer.class=com.alstom.datalab.hadoop.DirectOutputCommitter
-#submit --conf spark.storage.memoryFraction=0.2
+#submit --conf spark.storage.memoryFraction=0.1
 #submit --conf spark.shuffle.memoryFraction=0.4
 # command arguments
 args --method pipeline2to3
-args --repo s3a://gedatalab/data/repo
-args --dirout s3a://gedatalab/data/out/encoded
-args --control s3a://gedatalab/data/control
-args --meta s3a://gedatalab/data/meta
-args --partition 17
+#args --no-cache true
+args --repo hdfs:///data/repo
+args --dirout hdfs:///data/out/encoded
+args --control hdfs:///data/control
+args --meta hdfs:///data/meta
+#args --partition 17
 # shell specific options
-shell.dirin s3://gedatalab/data/in
-shell.dirdone s3://gedatalab/data/done
+shell.dirin hdfs:///data/in
+shell.dirdone hdfs:///data/done
 shell.batchfilesize 50
