add pipe3to4 in buildMeta

--- a/src/main/conf/buildMeta.conf
+++ b/src/main/conf/buildMeta.conf
@@ -14,7 +14,7 @@ submit --conf spark.KryoSerializer.buffer.max=128m
 args --method BuildMeta
 args --repo hdfs:///data/repo
 args --dirin hdfs:///data/out/encoded
-args --dirout hdfs:///data/meta
+args --dirout hdfs:///data/out/resolved
 args --control hdfs:///data/control
 args --meta hdfs:///data/meta
 #args --partition 17
