--- a/src/main/conf/pipe3to4.conf
+++ b/src/main/conf/pipe3to4.conf
@@ -12,13 +12,13 @@ submit --conf spark.KryoSerializer.buffer.max=128m
 #submit --conf spark.shuffle.memoryFraction=0.4
 # command arguments
 args --method pipeline3to4
-args --repo s3a://gedatalab/data/repo
-args --dirin s3a://gedatalab/data/out/encoded
-args --dirout s3a://gedatalab/data/out/resolved
-args --control s3a://gedatalab/data/control
-args --meta s3a://gedatalab/data/meta
+args --repo hdfs:///data/repo
+args --dirin hdfs:///data/out/encoded
+args --dirout hdfs:///data/out/resolved
+args --control hdfs:///data/control
+args --meta hdfs:///data/meta
 args --partition 16
 # shell specific options
-shell.dirin s3://gedatalab/data/control
-shell.dirdone s3://gedatalab/data/done
+shell.dirin hdfs:///data/control
+shell.dirdone hdfs:///data/done
 shell.batchfilesize 100
