--- a/src/main/conf/syncHdfsS3.conf
+++ b/src/main/conf/syncHdfsS3.conf
@@ -1,3 +1,4 @@
 # shell specific options
 shell.dirdatas3 s3://gedatalab/data
 shell.dirdatahdfs hdfs:///data
+shell.dirs3temp s3://gedatalab/datatemp
