--- a/infra/ansible/roles/pandas/tasks/main.yml
+++ b/infra/ansible/roles/pandas/tasks/main.yml
@@ -10,7 +10,7 @@
   pip: name=influxdb executable=pip3
 
 - name: Patch xlrd
-  patch: dest=/usr/lib/python3.4/site-packages/xlrd/compdoc.py src=compdoc.patch
+  patch: dest=/usr/lib/python3/dist-packages/xlrd/compdoc.py src=compdoc.patch
 
 - name: Install import.py script
   copy: src=../../../../import.py dest=/usr/local/bin/import.py mode=755
