s3n and fit to target directory structure

--- a/src/universal/conf/syncHdfsS3.conf
+++ b/src/universal/conf/syncHdfsS3.conf
@@ -1,4 +1,6 @@
 # shell specific options
-shell.dirdatas3 s3://gedatalab/data
-shell.dirdatahdfs hdfs:///data
-shell.dirs3temp s3://gedatalab/datatemp
+shell.dirpipelines3 s3n://gedatalab/pipeline
+shell.dirpipelinehdfs hdfs:///data
+shell.dirins3 s3n://gedatalab/in
+shell.dirinsaves3 s3n://gedatalab/arch/in
+shell.dirpipelinesaves3 s3n://gedatalab/arch/pipeline
