s3n and fit to target directory structure

--- a/src/universal/conf/repo.conf
+++ b/src/universal/conf/repo.conf
@@ -12,13 +12,13 @@ submit --conf spark.KryoSerializer.buffer.max=128m
 #submit --conf spark.shuffle.memoryFraction=0.4
 # command arguments
 args --method RepoProcessInFile
-args --repo s3a://gedatalab/data/repo
-args --dirin s3a://gedatalab/data/in/repo
-args --dirout s3a://gedatalab/data/repo
-args --control s3a://gedatalab/data/control
-args --meta s3a://gedatalab/data/meta
+args --repo hdfs:///data/repo
+args --dirin hdfs:///data/in/repo
+args --dirout hdfs:///data/repo
+args --control hdfs:///data/control
+args --meta hdfs:///data/meta
 #args --partition 17
 # shell specific options
-shell.dirin s3://gedatalab/data/in/repo
-shell.dirdone s3://gedatalab/data/done/repo
+shell.dirin hdfs:///data/in/repo
+shell.dirdone hdfs:///data/done/repo
 shell.batchfilesize 100
