fix meta issue (min_filedt field name) in pipe3to4

--- a/src/universal/conf/buildMeta.conf
+++ b/src/universal/conf/buildMeta.conf
@@ -11,14 +11,9 @@ submit --conf spark.KryoSerializer.buffer.max=128m
 #submit --conf spark.storage.memoryFraction=0.2
 #submit --conf spark.shuffle.memoryFraction=0.4
 # command arguments
-args --method pipeline3to4
+args --method BuildMeta
 args --repo hdfs:///data/repo
 args --dirin hdfs:///data/out/encoded
 args --dirout hdfs:///data/out/resolved
 args --control hdfs:///data/control
 args --meta hdfs:///data/meta
-args --partition 16
-# shell specific options
-shell.dirin hdfs:///data/control
-shell.dirdone hdfs:///data/done
-shell.batchfilesize 100
