--- a/src/universal/conf/genAIP.conf
+++ b/src/universal/conf/genAIP.conf
@@ -1,9 +1,9 @@
 # spark submit options
 submit --class  com.alstom.datalab.Main
-submit --num-executors   5
-submit --executor-cores  3
-submit --executor-memory  10G
-submit --driver-memory  8G
+#submit --num-executors   5
+#submit --executor-cores  3
+#submit --executor-memory  10G
+#submit --driver-memory  8G
 submit --conf spark.sql.shuffle.partitions=20
 submit --conf spark.sql.autoBroadcastJoinThreshold=52428800
 submit --conf spark.KryoSerializer.buffer.max=128m
@@ -12,13 +12,13 @@ submit --conf spark.KryoSerializer.buffer.max=128m
 #submit --conf spark.shuffle.memoryFraction=0.4
 # command arguments
 args --method GenAIP
-args --repo s3a://gedatalab/data/repo
-args --dirin s3a://gedatalab/data/in/repo
-args --dirout s3a://gedatalab/data/repo
-args --control s3a://gedatalab/data/control
-args --meta s3a://gedatalab/data/meta
+args --repo hdfs:///data/repo
+args --dirin hdfs:///data/in/repo
+args --dirout hdfs:///data/repo
+args --control hdfs:///data/control
+args --meta hdfs:///data/meta
 #args --partition 17
 # shell specific options
-shell.dirin s3://gedatalab/data/in/repo
-shell.dirdone s3://gedatalab/data/done/repo
+shell.dirin hdfs:///data/in/repo
+shell.dirdone hdfs:///data/done/repo
 shell.batchfilesize 100
