--- a/src/universal/conf/repo.conf
+++ b/src/universal/conf/repo.conf
@@ -1,9 +1,9 @@
 # spark submit options
 submit --class  com.alstom.datalab.Main
-submit --num-executors   5
-submit --executor-cores  3
-submit --executor-memory  10G
-submit --driver-memory  8G
+#submit --num-executors   5
+#submit --executor-cores  3
+#submit --executor-memory  10G
+#submit --driver-memory  8G
 submit --conf spark.sql.shuffle.partitions=20
 submit --conf spark.sql.autoBroadcastJoinThreshold=52428800
 submit --conf spark.KryoSerializer.buffer.max=128m
