--- a/src/universal/conf/pipe4to5.conf
+++ b/src/universal/conf/pipe4to5.conf
@@ -11,10 +11,14 @@ submit --conf spark.KryoSerializer.buffer.max=128m
 #submit --conf spark.storage.memoryFraction=0.2
 #submit --conf spark.shuffle.memoryFraction=0.4
 # command arguments
-args --method BuildMeta
+args --method pipeline4to5
 args --repo hdfs:///data/repo
-args --dirin hdfs:///data/out/encoded
-args --dirout hdfs:///data/out/resolved
-args --diragg hdfs:///data/out/aggregated
+args --dirin hdfs:///data/out/resolved
+args --dirout hdfs:///data/out/aggregated
 args --control hdfs:///data/control
 args --meta hdfs:///data/meta
+args --partition 16
+# shell specific options
+shell.dirin hdfs:///data/control
+shell.dirdone hdfs:///data/done
+shell.batchfilesize 100
