--- a/src/universal/conf/syncHdfsS3.conf
+++ b/src/universal/conf/syncHdfsS3.conf
@@ -1,5 +1,6 @@
 # shell specific options
 shell.dirpipelines3 s3n://gedatalab/pipeline
+shell.dircollectserverusages3 s3n://gecollect
 shell.dirpipelinehdfs hdfs:///data
 shell.dirins3 s3n://gedatalab/in
 shell.dirinsaves3 s3n://gedatalab/arch/in
