some pipeline updates to generate aggregated data for circos web app

--- a/src/universal/conf/webapp.conf
+++ b/src/universal/conf/webapp.conf
@@ -14,7 +14,7 @@ submit --conf spark.KryoSerializer.buffer.max=128m
 args --method WebApp
 args --repo hdfs:///data/repo
 args --dirin hdfs:///data/out/aggregated
-args --dirout s3n:///gewebapp
+args --dirout s3n://gewebapp
 args --control hdfs:///data/control
 args --meta hdfs:///data/meta
 args --partition 16
