add serverusage in pipeline

--- a/src/universal/conf/serverusage.conf
+++ b/src/universal/conf/serverusage.conf
@@ -17,6 +17,7 @@ args --repo hdfs:///data/repo
 args --dirout hdfs:///data/out/serverusage
 args --control hdfs:///data/control
 args --meta hdfs:///data/meta
+args --diragg hdfs:///data/out/aggregated
 #args --partition 17
 # shell specific options
 shell.dirin hdfs:///data/in/serverusage
