--- a/src/universal/conf/flow.conf
+++ b/src/universal/conf/flow.conf
@@ -1,6 +1,6 @@
 # spark submit options
 submit --class  com.alstom.datalab.Main
-#submit --num-executors   18
+#submit --num-executors   17
 #submit --executor-cores  3
 submit --executor-memory  10G
 #submit --driver-memory  8G
@@ -8,18 +8,12 @@ submit --conf spark.sql.shuffle.partitions=20
 submit --conf spark.sql.autoBroadcastJoinThreshold=52428800
 submit --conf spark.kryoserializer.buffer.max=128m
 #submit --conf spark.hadoop.mapred.output.committer.class=com.alstom.datalab.hadoop.DirectOutputCommitter
-#submit --conf spark.storage.memoryFraction=0.1
+#submit --conf spark.storage.memoryFraction=0.2
 #submit --conf spark.shuffle.memoryFraction=0.4
 # command arguments
-args --method ServerUsage
-#args --no-cache true
+args --method Flow
 args --repo hdfs:///data/repo
-args --dirout hdfs:///data/out/serverusage
-args --control hdfs:///data/control
-args --meta hdfs:///data/meta
 args --diragg hdfs:///data/out/aggregated
-#args --partition 17
+args --meta hdfs:///data/meta
 # shell specific options
-shell.dirin hdfs:///data/in/serverusage
-shell.dirdone hdfs:///data/done/serverusage
-shell.batchfilesize 1
+shell.batchfilesize 100
