--- a/src/universal/conf/pipe2to3.conf
+++ b/src/universal/conf/pipe2to3.conf
@@ -6,7 +6,7 @@ submit --executor-memory  10G
 #submit --driver-memory  8G
 submit --conf spark.sql.shuffle.partitions=20
 submit --conf spark.sql.autoBroadcastJoinThreshold=52428800
-submit --conf spark.KryoSerializer.buffer.max=128m
+submit --conf spark.kryoserializer.buffer.max=128m
 #submit --conf spark.hadoop.mapred.output.committer.class=com.alstom.datalab.hadoop.DirectOutputCommitter
 #submit --conf spark.storage.memoryFraction=0.1
 #submit --conf spark.shuffle.memoryFraction=0.4
