--- a/src/universal/conf/pipe2to3.conf
+++ b/src/universal/conf/pipe2to3.conf
@@ -2,7 +2,7 @@
 submit --class  com.alstom.datalab.Main
 #submit --num-executors   18
 #submit --executor-cores  3
-submit --executor-memory  10G
+submit --executor-memory  ${SPARK_WORKER_MEMORY:-10G}
 #submit --driver-memory  8G
 submit --conf spark.sql.shuffle.partitions=20
 submit --conf spark.sql.autoBroadcastJoinThreshold=52428800
