--- a/src/universal/conf/repo.conf
+++ b/src/universal/conf/repo.conf
@@ -2,9 +2,9 @@
 submit --class  com.alstom.datalab.Main
 #submit --num-executors   5
 #submit --executor-cores  3
-submit --executor-memory  10G
+submit --executor-memory  ${SPARK_WORKER_MEMORY:-10G}
 #submit --driver-memory  8G
-submit --conf spark.sql.shuffle.partitions=20
+#submit --conf spark.sql.shuffle.partitions=20
 submit --conf spark.sql.autoBroadcastJoinThreshold=52428800
 submit --conf spark.kryoserializer.buffer.max=128m
 #submit --conf spark.hadoop.mapred.output.committer.class=com.alstom.datalab.hadoop.DirectOutputCommitter
