fix issue on serversockets

--- a/src/universal/conf/buildMetaSockets.conf
+++ b/src/universal/conf/buildMetaSockets.conf
@@ -17,4 +17,4 @@ args --dirin hdfs:///data/out/encoded/serversockets
 args --dirout hdfs:///data/out/resolved_serversockets
 args --diragg hdfs:///data/out/aggregated/serversockets
 args --control hdfs:///data/control
-args --meta hdfs:///data/meta
+args --meta hdfs:///data/metasockets
