--- a/infra/ec2/deploy.generic/etc/httpd/conf.d/zeppelin.gealstom.eu.conf
+++ b/infra/ec2/deploy.generic/etc/httpd/conf.d/zeppelin.gealstom.eu.conf
@@ -10,8 +10,8 @@ Listen 443 https
     SSLEngine On
     SSLProtocol all -SSLv2 -SSLv3
     SSLCipherSuite HIGH:!MEDIUM:!aNULL:!MD5
-    SSLCertificateFile /etc/httpd/certs/zeppelin.crt
-    SSLCertificateKeyFile /etc/httpd/certs/zeppelin.key
+    SSLCertificateFile /etc/httpd/certs/zeppelin.gealstom.eu.crt
+    SSLCertificateKeyFile /etc/httpd/certs/zeppelin.gealstom.eu.key
     SSLCACertificateFile /etc/httpd/certs/ca.crt
     SSLVerifyClient require
     SSLVerifyDepth  1
@@ -19,7 +19,7 @@ Listen 443 https
     <Proxy *>
        Require all denied
     </Proxy>
-    <Proxy http://s3.amazonaws.com/gezeppelin/document*>
+    <Proxy http://s3.amazonaws.com/gecustomers*>
        Require all granted
     </Proxy>
     <Proxy "http://localhost:8080/*">
@@ -40,5 +40,5 @@ Listen 443 https
     ProxyRequests on
     PerlSetVar S3Key {{aws_access_key_id}}
     PerlSetVar S3Secret {{aws_secret_access_key}}
-    PerlSetVar S3Map '/gezeppelin/ => gezeppelin'
+    PerlSetVar S3Map '/gecustomers/ => gecustomers'
 </VirtualHost>
