update zeppelin apache conf

--- a/infra/ec2/deploy.generic/etc/httpd/conf.d/zeppelin.gadatalab.com.conf
+++ b/infra/ec2/deploy.generic/etc/httpd/conf.d/zeppelin.gadatalab.com.conf
@@ -1,17 +1,17 @@
 Listen 443 https
 <VirtualHost _default_:443>
-  ServerName zeppelin.gealstom.eu
-  ServerAlias gealstom.eu
-  ServerAdmin webmaster@gealstom.eu
+  ServerName zeppelin.gadatalab.com
+  ServerAlias gadatalab.com
+  ServerAdmin webmaster@gadatalab.com
   DocumentRoot /var/www/
-  ErrorLog logs/gealstom.eu-error_log
-  CustomLog logs/gealstom.eu-access_log common
+  ErrorLog logs/gadatalab.com-error_log
+  CustomLog logs/gadatalab.com-access_log common
 
   SSLEngine On
   SSLProtocol all -SSLv2 -SSLv3
   SSLCipherSuite HIGH:!MEDIUM:!aNULL:!MD5
-  SSLCertificateFile /etc/httpd/certs/zeppelin.gealstom.eu.crt
-  SSLCertificateKeyFile /etc/httpd/certs/zeppelin.gealstom.eu.key
+  SSLCertificateFile /etc/httpd/certs/zeppelin.gadatalab.com.crt
+  SSLCertificateKeyFile /etc/httpd/certs/zeppelin.gadatalab.com.key
   SSLCACertificateFile /etc/httpd/certs/ca.crt
   SSLVerifyClient require
   SSLVerifyDepth  1
