* Update Nginx configuration with custom LUA Nginx builds and wildcard cert

--- a/infra/proxy/Dockerfile
+++ b/infra/proxy/Dockerfile
@@ -1,8 +1,12 @@
 FROM ubuntu:16.04
 MAINTAINER raphael.luta@aptiwan.com
 
+ADD VERSION /
 RUN apt-get update -y && apt-get install -y dpkg-dev git
 RUN cd /opt && git clone https://github.com/anomalizer/ngx_aws_auth
+RUN cd /opt && git clone https://github.com/simpl/ngx_devel_kit
+RUN cd /opt && git clone https://github.com/openresty/set-misc-nginx-module
+RUN cd /opt && git clone https://github.com/openresty/lua-nginx-module
 RUN mkdir -p /opt/nginx
 WORKDIR /opt/nginx
 RUN apt-get source nginx
