--- a/infra/proxy/templates/conf.d/ssl.conf
+++ b/infra/proxy/templates/conf.d/ssl.conf
@@ -14,3 +14,8 @@ map  $ssl_client_s_dn  $ssl_client_s_dn_cn {
 	default "";
 	~/CN=(?<CN>[^/]+) $CN;
 }
+
+map  $ssl_client_s_dn  $ssl_client_email {
+        default "default";
+        ~/emailAddress=(?<email>[^/]+) $email;
+}
