* new ec2-variables * up to date shiro config

--- a/infra/spark/deploy.dev/root/spark-ec2/zeppelin/conf/shiro.ini
+++ b/infra/spark/deploy.dev/root/spark-ec2/zeppelin/conf/shiro.ini
@@ -1,11 +1,12 @@
 [users]
-default = password, users
 webmaster@gealstom.eu = password, users
+admin@gadatalab.com = password, users, admin
+geuser2@gadatalab.com = password, users
 raphael.luta@aptiwan.com = password, users, admin
 rvlasie@beamap.fr = password, users
 gupinot@lezoomer.com = password, users, admin
-jkhayi@beamap.fr = password, users
-monitor = rt5teOi_e6sW, users
+hamza.benguerrah@alstom.com = password, users
+monitor = rt5teOi_e6sW, users, monitor
 
 sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager
 securityManager.sessionManager = $sessionManager
