* implement a JWT auth system and make SSL auth optional

--- a/infra/proxy/templates/conf.d/ssl.conf
+++ b/infra/proxy/templates/conf.d/ssl.conf
@@ -8,14 +8,14 @@ ssl_certificate /etc/nginx/certs/gadatalab.com_bundle.crt;
 ssl_certificate_key /etc/nginx/certs/gadatalab.key;
 ssl_client_certificate /etc/nginx/certs/cabundle-client.crt;
 ssl_verify_depth 3;
-ssl_verify_client on;
+ssl_verify_client optional;
 
-map  $ssl_client_s_dn  $ssl_client_s_dn_cn {
+map $ssl_client_s_dn $ssl_client_s_dn_cn {
 	default "";
 	~/CN=(?<CN>[^/]+) $CN;
 }
 
-map  $ssl_client_s_dn  $ssl_client_email {
-        default "default";
-        ~/emailAddress=(?<email>[^/]+) $email;
+map $ssl_client_s_dn $ssl_login {
+	default "";
+  ~/emailAddress=(?<email>[^/]+) $email;
 }
