* generalize JWT access on all server hosts * rework ACL without *if* because they are evaluated before LUA * split redirect and JWT token extraction * don't pass proxy fake auth to S3, it breaks the API

--- a/infra/proxy/templates/includes/jwt-acl.conf
+++ b/infra/proxy/templates/includes/jwt-acl.conf
@@ -1,3 +1,1 @@
-if ($ssl_login !~ "^(.*@aptiwan.com|.*@lezoomer.com|.*@gadatalab.com|rvlasie@beamap.fr)$") {
-   return 403;
-}
+set $acl_pattern ".*@gealstom.eu|.*@aptiwan.com|.*@lezoomer.com|.*@gadatalab.com|rvlasie@beamap.fr";
