--- a/infra/proxy/templates/includes/jwt-auth.conf
+++ b/infra/proxy/templates/includes/jwt-auth.conf
@@ -1,4 +1,2 @@
-set $fakeAuth "Basic dGVzdDp0ZXN0";
-access_by_lua_file "/etc/nginx/lua/get-jwt-sub.lua";
-
-proxy_set_header Authorization $fakeAuth;
+rewrite_by_lua_file "/etc/nginx/lua/get-jwt-sub.lua";
+access_by_lua_file "/etc/nginx/lua/check-access.lua";
